# tuning

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  DESIGN.md  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: api.md  api.rst  conf.py  configuration.md  development.md  examples.md  index.md  quick-start.md
docs/_static/favicons/: site.webmanifest
docs/_templates/: layout.html
examples/: aux.py  banners.txt  basic_usage.py  custom_logger.yml  usage.py
tests/: test_banners.py  test_tuned_logger.py  test_tunned_logger.py
tuning/: __init__.py  _banners.py  _config.py  _levels.py  _models.py  _prompt.py  conf.yml  logger.py
tunning/: __init__.py  _config.py  _levels.py  _models.py  _prompt.py  conf.yml  logger.py
