[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tuning"
version = "0.1.0"
description = "A YAML-driven Rich/stdlib logging helper for CLI applications."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "octanima-labs", email = "octanima@tuta.io" },
]
keywords = ["cli", "logging", "rich", "yaml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]
dependencies = [
    "bitmath>=2.0.1",
    "PyYAML>=6.0.3",
    "rich>=15.0.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.3.0",
    "mypy>=1.18.2",
    "pre-commit>=4.5.0",
    "pytest>=9.0.3",
    "ruff>=0.14.9",
    "setuptools>=77",
    "twine>=6.1.0",
    "types-PyYAML>=6.0.12.20250915",
    "wheel>=0.45.1",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]
cli = [
    "typer>=0.25.1",
]
tui = [
    "textual>=8.2.5",
]

[project.urls]
Documentation = "https://octanima-labs.github.io/tuning/"
Repository = "https://github.com/octanima-labs/tuning"
Issues = "https://github.com/octanima-labs/tuning/issues"

[tool.setuptools]
packages = ["tuning"]
include-package-data = true

[tool.setuptools.package-data]
tuning = ["conf.yml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
files = ["tuning", "tests"]
check_untyped_defs = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["bitmath"]
ignore_missing_imports = true
